tests/NormalTests/paczka1/fuzzy1/55384526.err
Error in line 2: RuKcM S531 11,3
Error in line 5: RuKcM S16 28,7
Error in line 7: RuKcM S277 65,7
Error in line 12: x2GU3DpJLD7 A545 65,6
Error in line 10: RuKcM A545 88,7
Error in line 22: 1AR A545 4,1
Error in line 29: DOs S16 75,2
Error in line 36: RuKcM S531 51,1
